<resources>
    <string name="app_name">TimeLoop</string>
    <string name="add_a_new_timer">Добавить новый таймер</string>
    <string name="save">Сохранить</string>
    <string name="timer_name">Название</string>
    <string name="timer_name_hint">Назовите таймер</string>
    <string name="interval">Напоминать каждые</string>
    <string name="until">До</string>
    <string name="edit_timer_button">Edit timer button</string>
    <string name="delete_timer_button">Delete timer button</string>
    <string name="timeFormat">%02d:%02d:%02d</string>
    <string name="edit_error">Необходимо заполнить все поля</string>
    <string name="minutes">минут</string>
    <string name="interval_error">Неверно введен интервал</string>
    <string name="interval_size_error">Указанный интервал слишком большой</string>
    <string name="preferences_file">com.deadanddeceased.timeloop.PREFERENCES</string>
    <string name="each_blank_minutes">раз в %d м.</string>
</resources>